--- a/team.html
+++ b/team.html
@@ -7,6 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/swiper.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+        integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -105,17 +111,17 @@
         </section>
         <section class="service">
             <div class="container">
-                <h2 class="service-title">Training Schedule</h2>
+                <h2 class="service-title">Our squad</h2>
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-6</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -123,12 +129,12 @@
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-5</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -136,12 +142,12 @@
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-4</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -149,12 +155,12 @@
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-3</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -162,12 +168,12 @@
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-2</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -175,12 +181,51 @@
                     <div class="col-md-4 col-sm-6">
                         <a href="/pencere/">
                             <div class="card">
-                                <img src="img/mesq.jpg">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
                                 <div class="text">
-                                    <h5>Service-1</h5>
+                                    <h5>Player name</h5>
                                     <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
                                         Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
+                                    <span>Position</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="/pencere/">
+                            <div class="card">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
+                                <div class="text">
+                                    <h5>Player name</h5>
+                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
+                                        Lorem Lorem Lorem...</p>
+                                    <span>Position</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="/pencere/">
+                            <div class="card">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
+                                <div class="text">
+                                    <h5>Player name</h5>
+                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
+                                        Lorem Lorem Lorem...</p>
+                                    <span>Position</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <a href="/pencere/">
+                            <div class="card">
+                                <img src="https://icons.veryicon.com/png/o/miscellaneous/bitisland-world/person-18.png">
+                                <div class="text">
+                                    <h5>Player name</h5>
+                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
+                                        Lorem Lorem Lorem...</p>
+                                    <span>Position</span>
                                 </div>
                             </div>
                         </a>
@@ -216,19 +261,25 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="copyright">
-                    <span>© Copyright <span class="date">2023</span>. Bütün hüquqları qorunur</span>
+                    <span>© Copyright <span class="date">2023</span>.</span>
                     <p>Created and Marketed by:
-                        <a target="_blank" href="https://okmedia.az/">
-                            <img width="100" src="/img/okmedialogo1.png" alt="">
+                        <a target="_blank" href="">
+                            <img width="100" src="" alt="">
                         </a>
                     </p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="https://kit.fontawesome.com/d4a8753bf6.js" crossorigin="anonymous"></script>
+    <script src="js/fontawesome.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/javascript.js"></script>
 
 </body>
