--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <nav>
             <div class="first__navbar">
                 <div class="container">
@@ -24,9 +24,7 @@
                     </ul>
                     <ul class="contacts">
                         <li>Contact Us</li>
-                        <li><a href=""><i class="fa-solid fa-mobile-screen"></i>+971 55 509 9278</a></li>
-                        <li><a href="">+971 55 509 9278</a></li>
-                        <li><a href="">+971 55 509 9278</a></li>
+                        <li><a href=""><i class="fa-solid fa-mobile-screen"></i>+994 51 999 3348</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,10 +34,12 @@
                         <img height="80" src="img/FairPlay Logo.png" alt="">
                     </a>
                     <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="ageCategories.html">Age Categories</a></li>
-                        <li><a href="training.html">Training date</a></li>
-                        <li><a href="trainingVİdeo.html">Training videos</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="ageCategories.html">Age Groups</a></li>
+                        <li><a href="training.html">Training Schedule</a></li>
+                        <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="team.html">Our squad</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="btn-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
@@ -55,10 +55,12 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="menu-mobile">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="ageCategories.html">Age Categories</a></li>
-                    <li><a href="training.html">Training date</a></li>
-                    <li><a href="trainingVİdeo.html">Training videos</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="ageCategories.html">Age Groups</a></li>
+                    <li><a href="training.html">Training Schedule</a></li>
+                    <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="team.html">Our squad</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -123,13 +125,23 @@
                 <div id="contact-form">
                     <p></p>
                     <div class="row">
-
                         <div class="col-lg-6 p-0 p-md-1 ps-md-0">
-                            <input type="text" name="name" placeholder="Name Surname">
+                            <input type="text" name="firstName" placeholder="First name">
                         </div>
-
                         <div class="col-lg-6 p-0 p-md-1 ps-md-0">
-                            <input type="text" name="phone" placeholder="Phone">
+                            <input type="text" name="lastName" placeholder="Last name">
+                        </div>
+                        <div class="col-lg-6 p-0 p-md-1 ps-md-0">
+                            <input type="date" name="name" placeholder="Birthdate">
+                        </div>
+                        <div class="col-lg-6 p-0 p-md-1 ps-md-0">
+                            <input type="number" name="phone" placeholder="Contact number">
+                        </div>
+                        <div class="col-lg-6 p-0 p-md-1 ps-md-0">
+                            <input type="number" name="whatsApp" placeholder="WhatsApp">
+                        </div>
+                        <div class="col-lg-6 p-0 p-md-1 ps-md-0">
+                            <input type="email" name="phone" placeholder="Email address">
                         </div>
                         <div class="select-wrapper col-lg-12">
                             <select name="services">
@@ -166,10 +178,12 @@
             </div>
             <div class="footer__bottom">
                 <ul class="footer__menu">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="ageCategories.html">Age Categories</a></li>
-                    <li><a href="training.html">Training date</a></li>
-                    <li><a href="trainingVİdeo.html">Training videos</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="ageCategories.html">Age Groups</a></li>
+                    <li><a href="training.html">Training Schedule</a></li>
+                    <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="team.html">Our squad</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="copyright">
