--- a/news.html
+++ b/news.html
@@ -83,332 +83,31 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="First name">
+                                <label for="recipient-name" class="col-form-label">Recipient:</label>
+                                <input type="text" class="form-control" id="recipient-name">
                             </div>
-
                             <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Last name">
-                            </div>
-
-                            <div class="mb-3">
-                                <input type="date" class="form-control" placeholder="Birthdate">
-                            </div>
-
-                            <div class="mb-3">
-                                <input type="number" class="form-control" placeholder="Contact numbe">
-                            </div>
-
-                            <div class="mb-3">
-                                <input type="number" class="form-control" placeholder="WhatsApp">
-                            </div>
-
-                            <div class="mb-3">
-                                <input type="email" class="form-control" placeholder="Email address">
-                            </div>
-
-                            <div class="mb-3">
-                                <textarea placeholder="Message" class="form-control"></textarea>
+                                <label for="message-text" class="col-form-label">Message:</label>
+                                <textarea class="form-control" id="message-text"></textarea>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Send message</button>
                     </div>
                 </div>
             </div>
         </div>
         </div>
-        <section class="section-header">
-            <div class="header__title">
-                <h2>Welcome to</h2>
-                <h1>Fair Play academy</h1>
-                <h4>SEASON 2023 -2024 REGISTRATION NOW OPEN</h4>
-            </div>
-        </section>
-        <section class="about">
+        <section class="static-section">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <div class="about__title">
-                            <h3>ABOUT</h3>
-                            <h2>Fair Play Academy</h2>
-                            <p>Created by LaLiga, the world’s strongest league, Fair Play Academy offers young players
-                                across the UAE an immersive, professional football experience, with a superior
-                                methodology recognized as the gold standard in training and development globally.
-                            </p>
-                            <p>In five short years, Fair Play Academy has changed the face of youth football in the
-                                UAE, creating a new generation of world-class players and professional athletes.</p>
-                            <p>Training, at the hands of Fair Play Academy’s finest UEFA Pro-certified coaches, is
-                                highly
-                                personalized, blending technical and tactical skills with cognitive and
-                                conditioning, enabling players to embed learning, master the game and heighten their
-                                playing ability.</p>
-                            <p>The Academy also offers a professional development track for top young talent looking
-                                to pursue football careers or obtain soccer scholarships to universities in the US.
-                            </p>
-                            <p>Talents are discovered through Fair Play Academy exclusive scouting program and
-                                developed to Fair Play Academy professional standards at the Fair Play Academy High
-                                Performance Centre
-                                in the UAE.</p>
-                        </div>
-                        <div class="red_btn">
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register Now</button>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6">
-                        <div class="about__pic">
-                            <img src="img/about.png" al="">
-                        </div>
-                    </div>
+                <div class="breadcumb">
+                    <a href="index.html">Home</a>
+                    <a class="active" href="news.html">News</a>
                 </div>
             </div>
-        </section>
-        <section class="stars">
-            <div class="swiper">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide slide-1">
-                        <div class="slider-text container">
-                            <h3>Cristiano Ronaldo</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repellat ipsum
-                                repudiandae architecto quos odio, vel velit iste quasi accusantium.</p>
-                        </div>
-                        <div class="swiper-overlay"></div>
-                    </div>
-                    <div class="swiper-slide slide-2">
-                        <div class="slider-text container">
-                            <h3>Lionel Messi</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi praesentium similique
-                                voluptate nobis earum laboriosam.</p>
-
-                        </div>
-                        <div class="swiper-overlay"></div>
-                    </div>
-                    <div class="swiper-slide slide-3">
-                        <div class="slider-text container">
-                            <h3>Neymar</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ipsam porro hic
-                                aspernatur,
-                                voluptate, ducimus fugiat quibusdam saepe reprehenderit error cupiditate veniam laborum
-                                architecto nisi voluptatibus sit dolor deserunt. Id.</p>
-                        </div>
-                        <div class="swiper-overlay"></div>
-                    </div>
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-scrollbar"></div>
-            </div>
-        </section>
-        <section class="advantages">
-            <div class="container">
-                <div class="row">
-                    <div class="advantages__title">
-                        <h3>Why</h3>
-                        <h2>Fair Play Academy</h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="box_content">
-                                <img src="img/advantage-1.png" alt="Advantage Icon">
-                                <p>Fair Play Academy TRAINING &amp; DEVELOPMENT METHODOLOGY</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="box_content">
-                                <img src="img/advantage-2.png" alt="Advantage Icon">
-                                <p>Fair Play Academy UEAFA PRO CERTIFIED COACHES WITH SPORTS SCIENCE DEGREES</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="box_content">
-                                <img src="img/advantage-3.png" alt="Advantage Icon">
-                                <p>PLAYER EVALUATION REPORTS PER SEASON</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="box_content">
-                                <img src="img/advantage-4.png" alt="Advantage Icon">
-                                <p>İmproving Community Skills</p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="agecategory">
-            <div class="container">
-                <div class="row">
-                    <div>
-                        <h2>BOYS GIRLS</h2>
-                        <h3>AGE CATEGORIES</h3>
-                    </div>
-                    <div class="age_table">
-                        <div class="table">
-                            <div>
-                                <h6>U7/8 <br> Born 2016/17</h6>
-                                <p>July 2018 Dec 2019</p>
-                            </div>
-                            <div>
-                                <h6>U9/10
-                                    <br> Born 2014/15
-                                </h6>
-                                <p>January 2017 June 2018</p>
-                            </div>
-                            <div>
-                                <h6>U11/12
-                                    <br> Born 2012/13
-                                </h6>
-                                <p>January 2015 December 2016</p>
-                            </div>
-                            <div>
-                                <h6>U13/14
-                                    <br> Born 2010/11
-                                </h6>
-                                <p>January 2013 December 2014</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="service">
-            <div class="container">
-                <h2 class="service-title">Training Schedule</h2>
-                <div class="row">
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-6</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-5</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-4</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-3</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-2</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <a href="/pencere/">
-                            <div class="card">
-                                <img src="img/mesq.jpg">
-                                <div class="text">
-                                    <h5>Service-1</h5>
-                                    <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                        Lorem Lorem Lorem...</p>
-                                    <span>Detail</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="service">
-            <div class="container">
-                <h2 class="service-title">Photo and Video Gallery</h2>
-                <div class="row">
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <iframe width="100%" height="315"
-                            src="https://www.youtube.com/embed/uNRVCGV6zRI?si=JAsFSHOuT3ACahRZ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
+            <div class="static-overlay"></div>
         </section>
         <section class="news">
             <div class="container">
@@ -636,7 +335,6 @@
                             class="owl-next"><span aria-label="Next">›</span></button></div>
                     <div class="owl-dots disabled"></div>
                 </div>
-                <a href="news.html" class="news-all-btn">View all</a>
             </div>
         </section>
     </main>
@@ -667,10 +365,10 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="copyright">
-                    <span>© Copyright <span class="date">2023</span>.</span>
+                    <span>© Copyright <span class="date">2023</span>. Bütün hüquqları qorunur</span>
                     <p>Created and Marketed by:
-                        <a target="_blank" href="">
-                            <img width="100" src="" alt="">
+                        <a target="_blank" href="https://okmedia.az/">
+                            <img width="100" src="/img/okmedialogo1.png" alt="">
                         </a>
                     </p>
                 </div>
