--- a/trainingVİdeo.html
+++ b/trainingVİdeo.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <nav>
             <div class="first__navbar">
                 <div class="container">
@@ -24,9 +24,7 @@
                     </ul>
                     <ul class="contacts">
                         <li>Contact Us</li>
-                        <li><a href=""><i class="fa-solid fa-mobile-screen"></i>+971 55 509 9278</a></li>
-                        <li><a href="">+971 55 509 9278</a></li>
-                        <li><a href="">+971 55 509 9278</a></li>
+                        <li><a href=""><i class="fa-solid fa-mobile-screen"></i>+994 51 999 3348</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,11 +34,12 @@
                         <img height="80" src="img/FairPlay Logo.png" alt="">
                     </a>
                     <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="ageCategories.html">Age Categories</a></li>
-                        <li><a href="training.html">Training date</a></li>
-                        <li><a href="trainingVİdeo.html">Training videos</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="ageCategories.html">Age Groups</a></li>
+                        <li><a href="training.html">Training Schedule</a></li>
+                        <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="team.html">Our squad</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="btn-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
@@ -56,10 +55,12 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="menu-mobile">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="ageCategories.html">Age Categories</a></li>
-                    <li><a href="training.html">Training date</a></li>
-                    <li><a href="trainingVİdeo.html">Training videos</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="ageCategories.html">Age Groups</a></li>
+                    <li><a href="training.html">Training Schedule</a></li>
+                    <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="team.html">Our squad</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -104,7 +105,7 @@
         </section>
         <section class="service">
             <div class="container">
-                <h2 class="service-title">Training videos</h2>
+                <h2 class="service-title">Photo and Video Gallery</h2>
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <iframe width="100%" height="315"
@@ -169,13 +170,13 @@
                 </a>
             </div>
             <div class="footer__bottom">
-                <ul class="footer__menu">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="ageCategories.html">Age Categories</a></li>
-                    <li><a href="training.html">Training date</a></li>
-                    <li><a href="trainingVİdeo.html">Training videos</a></li>
+                <li><a href="about.html">About Us</a></li>
+                    <li><a href="ageCategories.html">Age Groups</a></li>
+                    <li><a href="training.html">Training Schedule</a></li>
+                    <li><a href="trainingVİdeo.html">Photo and Video Gallery</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="team.html">Our squad</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                </ul>
                 <div class="copyright">
                     <span>© Copyright <span class="date">2023</span>. Bütün hüquqları qorunur</span>
                     <p>Created and Marketed by:
