--- a/index.html
+++ b/index.html
@@ -126,6 +126,73 @@
                 <h4>SEASON 2023 -2024 REGISTRATION NOW OPEN</h4>
             </div>
         </section>
+        <section class="news">
+            <div class="container">
+                <div class="news-text">
+                    <h3>News</h3>
+                </div>
+                <div class="owl-carousel owl-theme owl-loaded owl-drag">
+                    <div class="owl-stage-outer">
+                        <div class="owl-stage"
+                            style="transform: translate3d(-1326px, 0px, 0px); transition: all 0s ease 0s; width: 4420px;">
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/newsMain.jfif" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/news.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/news.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/news.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/news.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
+                                <div class="item">
+                                    <div class="news-grid">
+                                        <img src="img/news.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><span
+                                aria-label="Previous">‹</span></button><button type="button" role="presentation"
+                            class="owl-next"><span aria-label="Next">›</span></button></div>
+                    <div class="owl-dots disabled"></div>
+                </div>
+                <a href="news.html" class="news-all-btn">View all</a>
+            </div>
+        </section>
         <section class="about">
             <div class="container">
                 <div class="row align-items-center">
@@ -410,235 +477,7 @@
                 </div>
             </div>
         </section>
-        <section class="news">
-            <div class="container">
-                <div class="news-text">
-                    <h3>News</h3>
-                </div>
-                <div class="owl-carousel owl-theme owl-loaded owl-drag">
-                    <div class="owl-stage-outer">
-                        <div class="owl-stage"
-                            style="transform: translate3d(-1326px, 0px, 0px); transition: all 0s ease 0s; width: 4420px;">
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-3</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-2</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="/img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-1</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-4</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-3</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-2</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item" style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-1</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-4</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-3</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 412px; margin-right: 30px;">
-                                <div class="item">
-                                    <div class="news-grid">
-                                        <div class="news-image-wrapper">
-                                            <img src="img/news.jpg" alt="">
-                                        </div>
-                                        <div class="news-content">
-                                            <p class="news-date">10.06.2023</p>
-                                            <h6 class="news-title">News-2</h6>
-                                            <p class="news-desc">
-                                                Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem Lorem
-                                                Lorem Lorem Lorem Lorem
-                                            </p>
-                                            <a href="" class="news-btn">
-                                                Continue reading
-                                                <i class="fa-solid fa-arrow-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><span
-                                aria-label="Previous">‹</span></button><button type="button" role="presentation"
-                            class="owl-next"><span aria-label="Next">›</span></button></div>
-                    <div class="owl-dots disabled"></div>
-                </div>
-                <a href="news.html" class="news-all-btn">View all</a>
-            </div>
-        </section>
+
     </main>
     <footer>
         <div class="container">
